# moment-explorer

./: CUBE_VIEWER_GUIDE.md  GETTING_STARTED.md  INDEX.md  INSTALLATION.md  LICENSE  MULTI_CUBE_EXAMPLE.md  README.md  SIGMA_CLIPPING_GUIDE.md  pyproject.toml  test_package.py
examples/: interactive_moment_maker.ipynb
src/moment_explorer/: __init__.py  cli.py  cube_viewer.py  explorer.py  ui.py
