[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moment-explorer"
version = "0.1.0"
description = "Interactive Plotly-based moment map visualization tool for FITS spectral cubes"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jea Adams Redai", email = "redaijea@gmail.com"}
]
keywords = ["astronomy", "fits", "moment-maps", "spectroscopy", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "numpy>=1.20",
    "astropy>=5.0",
    "bettermoments>=1.0",
    "plotly>=5.0",
    "ipywidgets>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
    "jupyterlab>=3.0",
]

[project.urls]
Homepage = "https://github.com/jeaadams/moment-explorer"
Repository = "https://github.com/jeaadams/moment-explorer"

[project.scripts]
moment-explorer = "moment_explorer.cli:main"

[tool.setuptools]
packages = ["moment_explorer"]
package-dir = {"" = "src"}
